# CSL7

./: .gitignore  COPYRIGHT  CSL7-no-input.jucer  CSL7.jucer  README.md  Version.txt
Builds/LinuxMakefile/: Makefile
Builds/MacOSX/: CSL7-Demo - App copy-Info.plist  Info-App.plist
Builds/VisualStudio2019/: CSL6Demo.sln  CSL6Demo_App.vcxproj  CSL6Demo_App.vcxproj.filters  CSL7-Demo.sln  CSL7-Demo_App.vcxproj  CSL7-Demo_App.vcxproj.filters  CSL7Demo.sln  CSL7Demo_App.vcxproj  CSL7Demo_App.vcxproj.filters  CSL7_Demo.sln  CSL7_Demo_App.vcxproj  CSL7_Demo_App.vcxproj.filters  resources.rc
Data/: Tympani.sf2  male.sf2
Data/SHARC/: README
Doc/: 7.0DemoQuickStart.pages  doxygen.conf
Doc/slides/: sl2.key  sl3.key  sl4.key  sl5.key  sl6.key  unpack-n-up.txt
JuceLibraryCode/: BinaryData.cpp  BinaryData.h  JuceHeader.h
Libs/libsamplerate-0.1.7/: Makefile  config.status  libtool
Libs/libsamplerate-master/: Makefile  Makefile.in  aclocal.m4  config.status  configure  libsamplerate.spec  libtool  samplerate.pc
Libs/libsndfile-1.0.28/: CMakeCache.txt  Makefile  cmake_install.cmake
Movies/: demo.txt
Old/: README.txt
Src/IO/: FileIO.cpp  FileIO.h  JUCEIO.cpp  JUCEIO.h  MIDIIOJ.cpp  MIDIIOJ.h  Microphone.h  OSC_main.cpp  OSC_support.cpp  OSC_support.h  SoundFile.cpp  SoundFile.h  SoundFileCA.cpp  SoundFileCA.h  SoundFileJ.cpp  SoundFileJ.h  SoundFileL.cpp  SoundFileL.h
Src/Includes/: FMInstrument.h  RIFF.h  SF2.h  SF2Generator.h  SF2Reader.h  SF2Sound.h  SFZEG.h  (+11 more)
Src/Scripting/: CSL6.i  CSL6.py  CSL6.sip  CSL6_wrap.cxx  Makefile  fib.sip  pyproject.toml  setup.py
(+181 files in other folders)
